--- a/vignettes/multiple-simulations.Rmd
+++ b/vignettes/multiple-simulations.Rmd
@@ -40,7 +40,7 @@ When summarizing the data, users will now also have to specify the `replicate` c
 
 ```
 sumdat_med <- summarize_data(
-  data = data,
+  data = data_new,
   value = stat,
   group = GROUP,
   group_level = LVL,
@@ -59,51 +59,49 @@ The output data now has nine additional columns: `mid_mid`, `mid_lo`, `mid_hi`, 
 As before, `plot_forest` will assume the column names listed above, and will throw an error if they are renamed to anything else.
 
 ```
-plot_forest(data = data_new , 
-            statistic = "median",
-            CI=0.95,
-            stat = stat,
-            covariate = GROUP,
-            cov_level = LVL,
-            nsim = nsim,
-            shaded_interval = c(0.8,1.25),
-            summary_label = plot_labels,
-            text_size = 3.5,
-            x_lab = "Fraction and 95% CI \nRelative to Reference",
-            CI_label = "Median [95% CI]",
-            plot_width = 9, # out of 12
-            x_breaks = c(0.4,0.6, 0.8, 1, 1.2, 1.4,1.6),
-            x_limit = c(0.4,1.45),
-            annotate_CI=T,
-            nrow = 1)
+sumdat_med %>%
+    plot_forest(shaded_interval = c(0.8,1.25),
+                summary_label = plot_labels,
+                text_size = 3.5,
+                x_lab = "Fraction and 95% CI \nRelative to Reference",
+                CI_label = "Median [95% CI]",
+                plot_width = 9, # out of 12
+                x_breaks = c(0.4,0.6, 0.8, 1, 1.2, 1.4,1.6),
+                x_limit = c(0.4,1.45),
+                annotate_CI=T,
+                nrow = 1)
 ```
 
 ![](assets/forestPlot-nsim.png)<!-- -->
 
 
-In cases where the additional confidence intervals overlap, you can vertically jitter them via the `jitter_nsim` argument (logical). An example can be seen below (note that the data is different than above):
+In cases where the additional confidence intervals overlap, you can vertically jitter them via the `jitter_reps` argument (logical). An example can be seen below (note that the data is different than above):
 
 ```
-plot_forest(data = plotData,
-            statistic = "mean",
-            CI=0.95,
-            stat = stat,
-            covariate = GROUP,
-            cov_level = LVL,
-            metagroup = param,
-            nsim = nsim,
-            shaded_interval = c(0.8,1.25),
-            summary_label = plot_labels,
-            text_size = 4,
-            vline_intercept = 1,
-            x_lab = "Fraction and 95% CI \nRelative to Reference",
-            CI_label = "Median [95% CI]",
-            plot_width = 8, # out of 12
-            x_breaks = c(0.4,0.6, 0.8, 1, 1.2, 1.4,1.6),
-            x_limit = c(0.4,1.45),
-            annotate_CI=T,
-            nrow = 1,
-            jitter_nsim = TRUE)
+sumdat_med <- summarize_data(
+  data = data_new2,
+  value = stat,
+  group = GROUP,
+  group_level = LVL,
+  replicate = nsim,
+  statistic = "median",
+  probs = c(0.05, 0.95),
+  rep_statistic = "geom_mean",
+  rep_probs = c(0.025, 0.975)
+)
+sumdat_med %>%
+    plot_forest(shaded_interval = c(0.8,1.25),
+                summary_label = plot_labels,
+                text_size = 3.5,
+                x_lab = "Fraction and 95% CI \nRelative to Reference",
+                CI_label = "Median [95% CI]",
+                plot_width = 9, # out of 12
+                x_breaks = c(0.4,0.6, 0.8, 1, 1.2, 1.4,1.6),
+                x_limit = c(0.4,1.45),
+                annotate_CI=T,
+                nrow = 1,
+                
+                jitter_reps = TRUE)
 ```
 
 ![](assets/forestPlot-nsim-jitter.png)<!-- -->
