--- a/vignettes/multiple-simulations.Rmd
+++ b/vignettes/multiple-simulations.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup, include=FALSE}
-if (interactive()) {
+if (interactive() || isTRUE(getOption('knitr.in.progress'))) {
   devtools::load_all()
 }
 ```
