--- a/README.Rmd
+++ b/README.Rmd
@@ -13,4 +13,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-# pmforest
+<!-- # pmforest <a href='https:/metrumresearchgroup.github.io/pmforest'><img src='man/figures/logo.png' align="right" height="120" /></a> -->
+
+<!-- badges: start -->
+[![Build Status](https://github-drone.metrumrg.com/api/badges/metrumresearchgroup/pmforest/status.svg)](https://github-drone.metrumrg.com/metrumresearchgroup/pmforest)
+[![codecov](https://codecov.io/gh/metrumresearchgroup/pmforest/branch/main/graph/badge.svg)](https://codecov.io/gh/metrumresearchgroup/pmforest)
+<!-- badges: end -->
+
+
+
+## Installation
