--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ You can install the latest development version from [GitHub](https://github.com/
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("metrumresearchgroup/pmforest", ref = "develop")
+devtools::install_github("metrumresearchgroup/pmforest", ref = "main")
 ```
 
 ## Documentation
