--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ You can find documentation and a "Getting Started" vignette that shows users how
 
 ### Featured Vignettes
 
-* [Getting Started with bbr](https://metrumresearchgroup.github.io/pmforest/articles/getting-started.html) -- Data specifications, summarization, and basic plotting methods.
+* [Getting Started](https://metrumresearchgroup.github.io/pmforest/articles/getting-started.html) -- Data specifications, summarization, and basic plotting methods.
 * [Multiple Simulations](https://metrumresearchgroup.github.io/pmforest/articles/multiple-simulations.html) -- Plotting additional confidence intervals over the 'replicate' or simulation run.
 
 ## Development
